[package]
name = "rusty-learner"
version = "0.1.0"
authors = ["aurelien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juice = { version = "0.2.3", default-features = false }
coaster = { version = "0.1.1", default-features = false }
greenglas = { version = "0.2" }

[features]
default = ["native"] # include only the ones you want to use, in this case "native"
native  = ["juice/native", "coaster/native"]